mule-user-guide/v/3.5/deploying-to-multiple-environments.adoc
= 部署到多个环境

在整个开发生命周期的不同阶段，您可能希望将应用程序部署到多个不同的环境中，如生产，质量保证和测试。您可以配置您的Mule应用程序，以促进部署到许多不同环境之一，无论是内部部署还是云中部署。为此，您必须完成以下宏步骤：

. 在您的应用程序中，为每个环境创建一个属性文件。

. 在您的应用程序中配置一个属性占位符，以便在启动时查找部署环境。

. 在应用程序部署期间配置环境变量以指向特定的环境。

考虑将配置的其他方面进行外部化，例如超时值，轮询频率等等，即使它们在环境之间不变化。这将有助于调整和试验，因为整个Mule应用程序可以通过单个属性文件进行配置。

== 假设

本文档假定您熟悉在Mule Studio中构建和部署Mule应用程序的练习。考虑阅读 link:/mule-user-guide/v/3.7/mule-fundamentals[骡子基础]以获取更多信息。

== 配置应用程序以在多个环境中部署

[tabs]
------
[tab,title="STUDIO Visual Editor"]
....
. Define a list of environments you wish to support in your application. For example, one common use case involves configuring the application to support both Production and a QA environments.

. Right-click the  `src/main/resources`  folder, then select  *New*  >  *File*   to create a properties file for each environment you wish to support. For example:
* qa.properties
* production.properties
+
image:properties_files.png[properties_files]

. Double-click each of these new files to open them in new tabs in Studio. By editing hem, you can configure the properties of the environment that correspond to the filename. For example, in `production.properties`, you may wish to add the properties as per the image below.  Keep in mind that you can use these properties anywhere in your application.
+
image:properties.png[properties]
+
[TIP]
====
Learn how to encrypt a properties file using the link:/mule-user-guide/v/3.6/mule-credentials-vault[Mule Credentials Vault].
====

. Close the properties files.

. Click in the Global Elements tab of your Studio project, below the canvas.

. *Create* a new global element.  When selecting the element type, pick *Property Placeholder*  under *Component Configurations*.

. Set the value of the *Location* field to  `${mule.env}.properties`
+
[TIP]
====
Learn more about link:/mule-user-guide/v/3.7/configuring-properties[configuring variable properties].
====

. To configure Studio to use a specific environment when  *deploying on-premise* , *debugging*  or  *using {{0}}*  to retrieve metadata from a SaaS provider, double-click to open your application's  `mule-project.xml` file, located in the root directory of your project.
+
[WARNING]
====
If you deploy your application to the cloud, in Studio select *Deploy to Anypoint Platform* -> *Cloud*. Studio allows you to specify your environment variables prior to deployment, effectively enabling you to choose your deployment environment at runtime.
====

. Add an environment variable named *`mule.env`* with a value that matches the environment to which you wish to deploy by default (in the image below, the value is `qa`).
+
image:runtime_env.png[runtime_env]

. Close the `mule-project.xml` file, then save your application. When you debug your application or deploy it on-premise, Studio deploys to the environment you specified in the `mule-project.xml` file. 

. To change the default deployment environment at any time, change the value of the environment variable key. For example, to deploy to a test environment – assuming you have a `test.properties` file in your application– change the value to `test`.
....
[tab,title="XML Editor"]
....
. Define a list of environments you wish to support in your application. For example, one common use case involves configuring the application to support both Production and a QA environments.

. Right-click the  `src/main/resources`  folder, then select  *New*  >  *File*   to create a properties file for each environment you wish to support. For example:

* qa.properties
* production.properties
+
image:properties_files.png[properties_files]

. Double-click each of these new files to open them in new tabs in Studio. By editing hem, you can configure the properties of the environment that correspond to the filename. For example, in `production.properties`, you may wish to add the properties as per the image below.  Keep in mind that you can use these properties anywhere in your application.
+
image:properties.png[properties]
+
[TIP]
====
Learn how to encrypt a properties file using the link:/mule-user-guide/v/3.6/mule-credentials-vault[Mule Credentials Vault].
====

. Close the properties files.

. At the top of your XML config, above all other flows, add a  **<context: property-placeholder/>** element with a *`resources`* attribute configured as per below.
+
[source, xml, linenums]
----
<context:property-placeholder resources="$mule.env.properties"/>
----
+
[TIP]
====
Learn more about link:/mule-user-guide/v/3.7/configuring-properties[configuring variable properties].
====

. To configure Studio to use a specific environment when  *deploying on-premise* , *debugging*  or  *using {{0}}*  to retrieve metadata from a SaaS provider, double-click to open your application's  `mule-project.xml` file, located in the root directory of your project. +
+
[WARNING]
====
If you deploy your application to the cloud, right click on your project in the package explorer and select *Deploy to Anypoint Platform* -> *Cloud*. Studio allows you to specify your environment variables prior to deployment, effectively enabling you to choose your deployment environment at runtime.
====

.  Add an environment variable named *`mule.env`* with a value that matches the environment to which you wish to deploy by default (in the image below, the value is `qa`).
+
image:runtime_env.png[runtime_env]

. Close the `mule-project.xml` file, then save your application. When you debug your application or deploy it on-premise, Studio deploys to the environment you specified in the `mule-project.xml` file. 

. To change the default deployment environment at any time, change the value of the environment variable key. For example, to deploy to a test environment – assuming you have a `test.properties` file in your application– change the value to `test`.
....
------

== 部署到特定环境

使用以下步骤从Studio中将应用程序部署到特定环境 - 生产，qa，测试等。

[tabs]
------
[tab,title="On-Premise"]
....

=== Studio

. In the Package Explorer, right-click the filename of the project you wish to deploy, then select *Run As* > *Mule Application*.

. Studio automatically deploys your application according the environment variable you specified in the `mule-project.xml` file in the procedure above.

=== Standalone

Identify the the environment in which to deploy your application at runtime with an environment variable. Execute the command to run your mule application as per the example below.

[source, code, linenums]
----
/.bin/mule -M-Dmule.env=production
----

[source, code, linenums]
----
$ mule -M-Dmule.env=production
----
....
[tab,title="CloudHub"]
....
. In the Package Explorer, right-click the filename of the project you wish to deploy, then select *Deploy to Anypoint Platform* -> *Cloud*.

. Then enter your Anypoint Platform credentials and domain particulars

. Click the *plus* sign under "environment variables" to add a new environment variable. Set the *Key* of this new variable to *mule.env* and it's value to the environment you wish to deploy to (QA in this example).
+
image:deploy_cloudhub.png[deploy_cloudhub]

. Click *Finish* to deploy.
+
[TIP]
====
To learn more about deploying to test environments in CloudHub, access the *CloudHub Sandbox Environments* documentation.
====
....
------

== 另请参阅

* 详细了解如何使用 link:/mule-user-guide/v/3.6/mule-credentials-vault[Mule证书库]加密属性文件。

* 要了解有关在CloudHub中部署到测试环境的更多信息，请访问CloudHub Sandbox Env​​ironments文档。

* 详细了解Mule中的 link:/mule-user-guide/v/3.7/configuring-properties[属性占位符]。
